--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
     }],
     "require": {
         "php": ">=5.4",
-        "symfony/css-selector": "2.8.*",
+        "apache/log4php": "2.3.0",
         "facebook/php-sdk-v4": "~5.0",
-        "apache/log4php": "2.3.0"
+        "symfony/css-selector": "^3.0.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8"
