--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     }],
     "require": {
         "php": "^5.4 || ^5.6 || ^7",
-        "symfony/css-selector": "^2.8 || ^3.1 || ^4.1",
+        "symfony/css-selector": "^2.8 || ^3.1 || ^4.1 || ^5.1",
         "facebook/graph-sdk": "~5.0"
     },
     "require-dev": {
