--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "homepage": "https://github.com/facebook/facebook-instant-articles-sdk-php/contributors"
     }],
     "require": {
-        "php": "^5.4 || ^5.6 || ^7",
+        "php": "^5.4 || ^5.6 || ^7 || ^8",
         "symfony/css-selector": "^2.8 || ^3.1 || ^4.1",
         "facebook/graph-sdk": "~5.0"
     },
