--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
         "homepage": "https://github.com/facebook/facebook-instant-articles-sdk-php/contributors"
     }],
     "require": {
-        "php": "^5.4 || ^5.6 || ^7",
+        "php": "^5.4 || ^5.6 || ^7 || ^8",
         "symfony/css-selector": "^2.8 || ^3.1 || ^4.1",
         "facebook/graph-sdk": "~5.0"
     },
     "require-dev": {
-        "fzaninotto/faker": "^1.6.0",
+        "fzaninotto/faker": "dev-master",
         "phpunit/phpunit": "4.8.*",
         "symfony/yaml": "2.1.* || 3.4.*",
         "phpdocumentor/reflection-docblock": "^2.0 || ^4.0",
