--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,16 @@
         "name": "Facebook",
         "homepage": "https://github.com/facebook/facebook-instant-articles-sdk-php/contributors"
     }],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/whyisjake/php-graph-sdk"
+        }
+    ],
     "require": {
         "php": "^5.4 || ^5.6 || ^7 || ^8",
         "symfony/css-selector": "^2.8 || ^3.1 || ^4.1",
-        "facebook/graph-sdk": "~5.0"
+        "facebook/graph-sdk": "dev-php8"
     },
     "require-dev": {
         "fzaninotto/faker": "dev-master",
